toolchain/internal/core/analysis/testdata/errors/duplicates/enum_rpc_same_name.vdl
// @expect: E805
// Enum and RPC share the same name

enum Orders {
  Pending
  Complete
}

rpc Orders {
  proc GetOrder {
    input {
      id: string
    }

    output {
      status: string
    }
  }
}
